# mtvsetup

./: .env  Cargo.toml  Dockerfile  README.md  clean.sh  db-schema.txt  docker-compose.yml  mtvsetup.service  run.sh  start.sh
src/: config.yaml  envvars.rs  main.rs  mtv_clean.rs  mtv_create_ids.rs  mtv_env_vars.rs  mtv_image.rs  mtv_misc.rs  mtv_mp3_info.rs  mtv_nnc_info.rs  mtv_process_movie_images.rs  mtv_process_movies.rs  mtv_process_mp3s.rs  mtv_process_music.rs  mtv_process_music_images.rs  mtv_process_tvshows.rs  mtv_split.rs  mtv_tables.rs  mtv_types.rs  mtv_utils.rs  mtv_walk_dirs.rs  player.rs  server.rs  servermov.rs  serversetup.rs  servertvs.rs  serverutils.rs  setup.rs
src/setup/: mtv_image.rs  mtv_misc.rs  mtv_process_movie_images.rs  mtv_process_movies.rs  mtv_process_tvshows.rs  mtv_split.rs  mtv_tables.rs  mtv_types.rs  mtv_utils.rs  mtv_walk_dirs.rs
