[package]
name = "mtvsetup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filesize = "0.2.0"
image = "0.24.5"
json = "0.12.4"
md-5 = "0.10.5"
walkdir = "2.3.2"
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
actix-web = "4"
actix-cors = "0.6.4"
actix-files = "0.6.2"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.64"
env_logger = "0.10.0"
regex = "1.9.1"
