[package]
name = "mtvsetup"
version = "0.2.0"
edition = "2021"


[dependencies]
filesize = "0.2.0"
image = "0.24.5"
md-5 = "0.10.5"
walkdir = "2.3.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.0"
env_logger = "0.10.0"
regex = "1.9.1"
dotenv = "0.15.0"
rayon = "1.10.0"
